Bug 539683 - defunct object methods should return CO_E_OBJNOTCONNECTED, patch=tbsaunde, surkov, r=surkov, tbsaunde